Exercise modelmapper Android serialization instantiator directly